feat: Now you can change themes

--- a/customcalculator.kv
+++ b/customcalculator.kv
@@ -1,36 +1,14 @@
 <Button>:
-    background_color: 0.1, 0.1, 0.1, 1
-    color: 0, 1, 0, 1
-    font_size: 20
-    font_name: "fonts/Inter-Light.otf"
+    font_name: "fonts/Symbola.ttf"
+    background_color: [0.1, 0.1, 0.1, 1]
+    color: [0, 1, 0, 1]
 
 <Label>:
-    background_color: 0.1, 0.1, 0.1, 1
-    color: 0, 1, 0, 1
-    font_name: "fonts/Inter-Light.otf"
+    font_name: "fonts/Symbola.ttf"
+    background_color: [0.1, 0.1, 0.1, 1]
+    color: [0, 1, 0, 1]
 
 <Spinner>:
-    background_color: 0.1, 0.1, 0.1, 1
-    color: 0, 1, 0, 1
-    font_size: 20
-    font_name: "fonts/Inter-Light.otf"
-    canvas.before:
-        Color:
-            rgba: 0, 0, 0, 1
-        Rectangle:
-            pos: self.pos
-            size: self.size
-
-<SpinnerOption>:
-    background_color: 0.1, 0.1, 0.1, 1
-    color: 0, 1, 0, 1
-    font_size: 20
-    font_name: "fonts/Inter-Light.otf"
-    height: 40
-
-<SpinnerDropdown>:
-    background_color: 0.1, 0.1, 0.1, 1
-    color: 0, 1, 0, 1
-    font_size: 20
-    font_name: "fonts/Inter-Light.otf"
-    height: 40
+    font_name: "fonts/Symbola.ttf"
+    background_color: [0.1, 0.1, 0.1, 1]
+    color: [0, 1, 0, 1]
