fix: Сorrect work change of themes

--- a/customcalculator.kv
+++ b/customcalculator.kv
@@ -1,14 +1,8 @@
 <Button>:
-    font_name: "fonts/Symbola.ttf"
-    background_color: [0.1, 0.1, 0.1, 1]
-    color: [0, 1, 0, 1]
+    font_name: "fonts/InterTight-ThinItalic.ttf"
 
 <Label>:
-    font_name: "fonts/Symbola.ttf"
-    background_color: [0.1, 0.1, 0.1, 1]
-    color: [0, 1, 0, 1]
+    font_name: "fonts/InterTight-ThinItalic.ttf"
 
 <Spinner>:
-    font_name: "fonts/Symbola.ttf"
-    background_color: [0.1, 0.1, 0.1, 1]
-    color: [0, 1, 0, 1]
+    font_name: "fonts/InterTight-ThinItalic.ttf"
