finaly: Сorrect work customcalculate beta v. 1.0

--- a/customcalculator.kv
+++ b/customcalculator.kv
@@ -1,8 +1,8 @@
 <Button>:
-    font_name: "fonts/InterTight-ThinItalic.ttf"
+    font_name: "fonts/Symbola.ttf"
 
 <Label>:
-    font_name: "fonts/InterTight-ThinItalic.ttf"
+    font_name: "fonts/Symbola.ttf"
 
 <Spinner>:
-    font_name: "fonts/InterTight-ThinItalic.ttf"
+    font_name: "fonts/Symbola.ttf"
